Fixed various errors found on validator for HTMLand css

--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link"href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="services.html">Services</a>
@@ -67,7 +67,7 @@
                 <img src="assets/images/pexels-marcuschanmedia-33185466.jpg" alt="person using the cable pull station">
                 <img src="assets/images/pexels-andres-ayrton-6551429.jpg" alt="person pulling the rope from rowing machine">
                 <img src="assets/images/pexels-gustavo-scafeli-1662059539-33177820.jpg" alt="person motivating someone">
-                
+                </div>
             </div>
         </div>
 
@@ -94,9 +94,9 @@
                         <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
-                        <li><a href="https://www.instagram.com" target="_blank"
+                        <a href="https://www.instagram.com" target="_blank"
                                 aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-instagram"></i></a></li>
+                                    class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-square-facebook"></i></a>
