--- a/services.html
+++ b/services.html
@@ -50,119 +50,132 @@
     <!-- Main Content -->
     <main>
         <section>
-            <div id="services-page" class="row justify-content-center">
+            <div id="services-page" class="services-page row justify-content-center">
                 <div class="col-12 text-center">
                     <h2 id="service" class="display-3">Services</h2>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
 
-                    <div id="srvc-cards" class="card">
-                        <img id="srvc-img" src="assets/images/pexels-thisisengineering-3912516.jpg" alt="boxing ring">
+                    <div class="infocard card">
+                        <img class="srvc-img" src="assets/images/pexels-thisisengineering-3912516.jpg"
+                            alt="boxing ring">
                         <h1 id="boxing-button" class="btn btn-primary text-center"> Boxing Facilities</h1>
-
+                        <h2 class="benefit text-center">Benefits</h2>
                         <ul id="benefits">
-                            <h2 class="text-center">Benefits</h2>
+
                             <li><strong>Realistic Environment</strong>: Boxing rings simulate the actual environment
                                 where boxing,
                                 kickboxing and martial artists matches take place. Training in a ring helps boxers,
                                 kickboxing and martial artists become more comfortable with the space, ropes, and
-                                corners, which can be critical in a real fight.</li><Br>
+                                corners, which can be critical in a real fight.</li>
 
                             <li><strong>Footwork and Movement</strong>: Boxing, kickboxing and martial artists rings
                                 provide ample space
                                 for footwork and movement. Practicing footwork in the ring helps boxers, kickboxing and
-                                martial artists improve their agility, balance, and overall mobility.</li><br>
+                                martial artists improve their agility, balance, and overall mobility.
+                            </li>
+
                             <li><strong>Spatial Awareness</strong>: Being inside a ring allows boxers, kickboxing and
                                 martial artists to
                                 develop a better sense of spatial awareness. They learn to gauge distances, angles, and
-                                the position of their opponent, which is crucial in boxing.</li><br>
+                                the position of their opponent, which is crucial in boxing.</li>
 
                             <li><strong>Conditioning and Cardio</strong>: Boxing ring training can be very physically
                                 demanding,
                                 providing an excellent cardiovascular workout. It helps improve endurance, stamina, and
-                                overall fitness.</li><br>
+                                overall fitness.</li>
                             <li><strong>Ring Strategy</strong>: Practicing in a ring allows boxers, kickboxing and
                                 martial artists to
                                 work on ring strategy, which includes understanding ring positioning, cutting off
-                                opponents, and utilising the corners effectively.</li><br>
+                                opponents, and utilising the corners effectively.</li>
                             <li><strong>Mental Toughness</strong>: Training in a ring can help build mental toughness.
                                 It can be
                                 intimidating to face an opponent in a confined space, and ring training can help boxers,
-                                kickboxing and martial artists become more comfortable under pressure.</li><br>
+                                kickboxing and martial artists become more comfortable under pressure.</li>
                             <li><strong>Sparring and Simulation</strong>: Sparring sessions are usually conducted in a
                                 ring, allowing
                                 boxers, kickboxing and martial artists to practice and test their skills in a controlled
-                                environment that closely mimics a real fight.</li><br>
+                                environment that closely mimics a real fight.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
-                    <div id="srvc-cards" class="card">
-                        <img id="srvc-img" src="assets/images/huum-K65M3GbRYq8-unsplash.jpg" alt="sauna facilities">
+                    <div class="infocard card">
+                        <img class="srvc-img" src="assets/images/huum-K65M3GbRYq8-unsplash.jpg" alt="sauna facilities">
                         <h1 id="sauna-button" class="btn btn-primary text-center">Sauna Facilities</h1>
+                        <h2 class="benefit text-center">Benefits</h2>
                         <ul>
-                            <h2 class="text-center">Benefits</h2>
-                            <li><strong>Accelerated Muscle Recovery</strong><br>
+
+                            <li><strong>Accelerated Muscle Recovery</strong>
                                 Your muscles require a period of recovery after a tough gym session (whether that means
                                 strength training, cardio, or a group class). Sauna sessions help:</li>
-                            <ol><br>
-                                <li>Increase blood circulation, which brings oxygen and nutrients to tired muscles</li>
-                                <li>Flush out metabolic waste like lactic acid</li>
-                                <li>Reduce delayed onset muscle soreness (DOMS), which can occur 24~72 hours
-                                    post-exercise</li>
-                            </ol><Br>
-                            <li><strong>Improved Cardiovascular Health</strong><br>
+                        </ul>
+                        <ol>
+                            <li>Increase blood circulation, which brings oxygen and nutrients to tired muscles</li>
+                            <li>Flush out metabolic waste like lactic acid</li>
+                            <li>Reduce delayed onset muscle soreness (DOMS), which can occur 24~72 hours
+                                post-exercise</li>
+                        </ol>
+                        <ul>
+                            <li><strong>Improved Cardiovascular Health</strong>
                                 Regular sauna use has been linked to better heart health. Research from the University
                                 of Eastern Finland tracked over 2,000 middle-aged men for over two decades. Those who
                                 used the sauna 4–7 times per week had a significantly reduced risk of:
                             </li>
-                            <ol>
-                                <li>Fatal heart disease</li>
-                                <li>Sudden cardiac death</li>
-                                <li>Stroke</li><Br>
-                            </ol>
+                        </ul>
+                        <ol>
+                            <li>Fatal heart disease</li>
+                            <li>Sudden cardiac death</li>
+                            <li>Stroke</li>
+                        </ol>
+                        <ul>
                             <li><strong>Mental Clarity and Stress Relief</strong>
                                 Let’s not underestimate the power of a good sweat. Spending just 10–15 minutes in a
                                 sauna can:</li>
-                            <ol>
-                                <li>Lower cortisol levels (the stress hormone)</li>
-                                <li>Promote endorphin release (the “feel-good” hormone)</li>
-                                <li>Create a moment of stillness — away from screens and distractions</li>
-                            </ol><br>
+                        </ul>
+
+                        <ol>
+                            <li>Lower cortisol levels (the stress hormone)</li>
+                            <li>Promote endorphin release (the “feel-good” hormone)</li>
+                            <li>Create a moment of stillness — away from screens and distractions</li>
+                        </ol>
+                        <ul>
                             <li><strong>Enhanced Skin Health</strong>
                                 The heat from a sauna opens pores and increases sweat production, which may help:</li>
-                            <ol>
-                                <li>Clear out dirt and dead skin cells</li>
-                                <li>Increase circulation to the skin.</li>
-                                <li>Support collagen production over time.</li>
-                            </ol>
                         </ul>
+                        <ol>
+                            <li>Clear out dirt and dead skin cells</li>
+                            <li>Increase circulation to the skin.</li>
+                            <li>Support collagen production over time.</li>
+                        </ol>
+
                     </div>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
-                    <div id="srvc-cards" class="card">
-                        <img id="srvc-img" src="assets/images/pexels-jacobyavin-12918910.jpg" alt="pool facilities">
+                    <div class="infocard card">
+                        <img class="srvc-img" src="assets/images/pexels-jacobyavin-12918910.jpg" alt="pool facilities">
                         <h1 id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</h1>
+                        <h2 class="benefit text-center">Benefits</h2>
                         <ul>
-                            <h2 class="text-center">Benefits</h2>
+
                             <li><strong>Full body workout</strong> Swimming uses all the muscles in the body so whether
                                 you swim a
                                 gentle breaststroke or hammer butterfly, you will get a full body workout. Plus,
                                 exercising in water makes your body work harder so 30 minutes in a pool is worth 45
-                                minutes of the same activity on land.</li><Br>
+                                minutes of the same activity on land.</li>
                             <li><strong>Great for general wellbeing</strong> Just 30 minutes of swimming three times a
                                 week alongside a
                                 balanced, healthy diet and lifestyle is one of the best ways to stay fit and healthy and
-                                maintain a positive mental outlook. Do it with friends, and it’s even more fun!</li><br>
+                                maintain a positive mental outlook. Do it with friends, and it’s even more fun!</li>
                             <li><strong>De-stresses and relaxes</strong> Whether it’s work stressing you out, the kids
                                 being a nightmare, or just life in general, we all get times we just want to SCREAM.
                                 Well, help is at hand. Swimming regularly can lower stress levels, reduce anxiety and
                                 depression, and improve your sleep patterns. Feeling the mental benefits of swimming
-                                takes just a light swim. No lane pounding needed.</li><br>
+                                takes just a light swim. No lane pounding needed.</li>
                             <li><strong>Burns those calories</strong> Swimming is one of the most effective ways to burn
                                 calories. A gentle swim can burn over 200 calories in just half an hour, more than
                                 double that of walking. And a faster swim would see that chocolate bar gone quicker than
-                                if you went running or cycling.</li><br>
+                                if you went running or cycling.</li>
                             <li><strong>Increases your energy levels</strong> Inactivity and not ageing is often
                                 responsible for people’s lack of energy. Just 30 minutes of swimming three times per
                                 week can boost your energy levels through increased metabolic rate.</li>
@@ -171,36 +184,38 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
 
-                    <div id="srvc-cards" class="card">
-                        <img id="srvc-img" src="assets/images/pexels-julia-larson-6455791.jpg" alt="staff training">
+                    <div class="infocard card">
+                        <img class="srvc-img" src="assets/images/pexels-julia-larson-6455791.jpg" alt="staff training">
                         <h1 id="trainer-button" class="btn btn-primary text-center"> Staff Training</h1>
+                        <h2 class="benefit text-center">Benefits</h2>
                         <ul>
-                            <h2 class="text-center">Benefits</h2>
-                            <li><strong>Personalized Training</strong><br>
+
+                            <li><strong>Personalized Training</strong>
                                 Gym staff can tailor workout plans to individual needs, goals, and fitness levels. They
                                 consider factors like existing health conditions, medications, and even personal
-                                preferences when designing exercise routines. </li><br>
-                            <li><strong>Proper Form and Technique</strong><br>
+                                preferences when designing exercise routines. </li>
+                            <li><strong>Proper Form and Technique</strong>
                                 Trainers ensure clients are performing exercises correctly, minimizing the risk of
                                 injury and maximizing effectiveness. They provide guidance on weight selection,
-                                repetitions, and proper posture. </li><br>
-                            <li><strong>Increased Knowledge and Confidence</strong><br>
+                                repetitions, and proper posture. </li>
+                            <li><strong>Increased Knowledge and Confidence</strong>
                                 Working with a trainer can increase a client's knowledge of exercise and anatomy,
                                 boosting their confidence in the gym. They can also learn new exercises and techniques
-                                to diversify their workouts. </li><Br>
-                            <li><strong>Injury Prevention</strong><br>By ensuring proper form and technique, trainers
+                                to diversify their workouts. </li>
+                            <li><strong>Injury Prevention</strong> By ensuring proper form and technique, trainers
                                 help clients avoid injuries. They can also help with rehabilitation exercises and offer
-                                guidance on safe exercise practices. </li><br>
-                            <li><strong>Motivation and Accountability</strong><Br>Trainers provide encouragement and
+                                guidance on safe exercise practices. </li>
+                            <li><strong>Motivation and Accountability</strong> Trainers provide encouragement and
                                 support, helping clients stay on track with their fitness goals. They can also serve as
                                 a source of accountability, ensuring clients attend workouts and adhere to their plans.
                             </li>
                         </ul>
                     </div>
                 </div>
+                </div>
         </section>
     </main>
-   <footer class="mt-auto">
+    <footer class="mt-auto">
         <div class="container section">
             <div class="row justify-content-center">
                 <div class="col-12 text-center">
@@ -218,9 +233,9 @@
                         <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
-                        <li><a href="https://www.instagram.com" target="_blank"
+                        <a href="https://www.instagram.com" target="_blank"
                                 aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-instagram"></i></a></li>
+                                    class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-square-facebook"></i></a>
