--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <div id="servicesgym"></div>
                 <a id="underline" href="services.html">
                     <div class="content">
+                        
                         <h1>Services</h1>
                 </a>
             </div>
@@ -145,9 +146,9 @@
                         <i class="fa-regular fa-paper-plane"></i> Grandgym@gmail.com
                     </p>
                     <div id="social-links" class="social-links my-4">
-                        <li><a href="https://www.instagram.com" target="_blank"
+                        <a href="https://www.instagram.com" target="_blank"
                                 aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-instagram"></i></a></li>
+                                    class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-square-facebook"></i></a>
