--- a/index.html
+++ b/index.html
@@ -46,30 +46,29 @@
             </div>
         </div>
     </nav>
-
     <!-- Main Content -->
     <main>
-
         <div class="col-12">
             <div id="show_bg_2">
-                <h3 id="bg-text" class="text-center">Smash your goals with cutting-edge kit on a spacious gym floor - built to move with you. Dive into our
-                heated indoor pool for some serious lengths or kick back in our spa facilities. Jump into one of many
-                epic fitness classes every week - from high-energy sweat sessions to holistic resets, we've got your
-                fitness covered.</h3>
+                <h3 id="bg-text" class="text-center">Smash your goals with cutting-edge kit on a spacious gym floor -
+                    built to move with you. Dive into our
+                    heated indoor pool for some serious lengths or kick back in our spa facilities. Jump into one of
+                    many
+                    epic fitness classes every week - from high-energy sweat sessions to holistic resets, we've got your
+                    fitness covered.</h3>
                 <a id="contact-btn" class="centered-image btn btn-lg" href="booking-form.html">Contact us!</a>
             </div>
         </div>
-
         <div class="gym-img">
             <div class="image">
                 <div id="servicesgym"></div>
                 <a id="underline" href="services.html">
                     <div class="content">
-                        
+
                         <h1 id="servbutton">Services</h1>
+                    </div>
                 </a>
             </div>
-        </div>
         </div>
         <section id="opening-times" class="continer section">
             <div class="row">
@@ -84,7 +83,6 @@
                                     <th scope="col">Day</th>
                                     <th scope="col">Open</th>
                                     <th scope="col">Closed</th>
-
                                 </tr>
                             </thead>
                             <tbody>
@@ -92,13 +90,11 @@
                                     <th scope="row">Monday</th>
                                     <td>8am</td>
                                     <td>11pm</td>
-
                                 </tr>
                                 <tr>
                                     <th scope="row">Tuesday</th>
                                     <td>8am</td>
                                     <td>11pm</td>
-
                                 </tr>
                                 <tr>
                                     <th scope="row">Wedneday</th>
@@ -123,11 +119,10 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
+            </div>
         </section>
-
     </main>
-
-
     <footer class="mt-auto">
         <div class="container section">
             <div class="row justify-content-center">
@@ -147,8 +142,8 @@
                     </p>
                     <div id="social-links" class="social-links my-4">
                         <a href="https://www.instagram.com" target="_blank"
-                                aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
-                                    class="fa-brands fa-instagram"></i></a>
+                            aria-label="Visit our Instagram page (opens in a new tab)" rel="noopener"><i
+                                class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.facebook.com" target="_blank"
                             aria-label="Visit our Facebook page (opens in a new tab)" rel="noopener"><i
                                 class="fa-brands fa-square-facebook"></i></a>
@@ -162,8 +157,6 @@
                                 class="fa-brands fa-bluesky"></i></a>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </footer>
@@ -174,8 +167,7 @@
     </script>
     <!--Font Awesome Kit-->
     <script src="https://kit.fontawesome.com/51e5a05c55.js" crossorigin="anonymous"></script>
-
-
+    
     <script>
         document
             .querySelectorAll(".navbar-collapse .nav-link")
