Converted all the images to WEBP and resized them to reduce their size for better performance

--- a/gallery.html
+++ b/gallery.html
@@ -54,17 +54,17 @@
             </div>
             <div class="container-box">
                 <div class="image-container">
-                    <img src="assets/images/pexels-victorfreitas-841130.jpg" alt="person lifting a bar with weights">
-                    <img src="assets/images/pexels-willpicturethis-1954524.jpg" alt="person running on a treadmil">
-                    <img src="assets/images/pexels-leonardho-1552242.jpg" alt="two people using battle ropes">
-                    <img src="assets/images/pexels-pavel-danilyuk-6339342.jpg" alt="people exercising">
-                    <img src="assets/images/pexels-pixabay-416717.jpg" alt="image of different kettlebells">
-                    <img src="assets/images/pexels-julia-larson-6456139.jpg" alt="two people training">
-                    <img src="assets/images/pexels-marcuschanmedia-33185466.jpg"
+                    <img src="assets/images/Converted/gallery.html-image-9.webp" alt="person lifting a bar with weights">
+                    <img src="assets/images/Converted/gallery.html-image-4.webp" alt="person running on a treadmil">
+                    <img src="assets/images/Converted/gallery.html-image-1.webp " alt="two people using battle ropes">
+                    <img src="assets/images/Converted/gallery.html-image-6.webp" alt="people exercising">
+                    <img src="assets/images/Converted/gallery.html-image-7.webp" alt="image of different kettlebells">
+                    <img src="assets/images/Converted/gallery.html-image-3.webp" alt="two people training">
+                    <img src="assets/images/Converted/gallery.html-image-8.webp"
                         alt="person using the cable pull station">
-                    <img src="assets/images/pexels-andres-ayrton-6551429.jpg"
+                    <img src="assets/images/Converted/gallery.html-image-2.webp"
                         alt="person pulling the rope from rowing machine">
-                    <img src="assets/images/pexels-gustavo-scafeli-1662059539-33177820.jpg"
+                    <img src="assets/images/Converted/gallery.html-image-5.webp"
                         alt="person motivating someone">
                 </div>
             </div>
