--- a/services.html
+++ b/services.html
@@ -56,9 +56,9 @@
                 <div class="row col-12 col-md-6 col-xl-6">
 
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/pexels-thisisengineering-3912516.jpg"
+                        <img class="srvc-img" src="assets/images/Converted/services.html-boxing-facilities.webp"
                             alt="boxing ring">
-                        <h1 id="boxing-button" class="btn btn-primary text-center"> Boxing Facilities</h1>
+                        <p id="boxing-button" class="btn btn-primary text-center"> Boxing Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul id="benefits">
                             <li><strong>Realistic Environment</strong>: Boxing rings simulate the actual environment
@@ -96,8 +96,8 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/huum-K65M3GbRYq8-unsplash.jpg" alt="sauna facilities">
-                        <h1 id="sauna-button" class="btn btn-primary text-center">Sauna Facilities</h1>
+                        <img class="srvc-img" src="assets/images/Converted/services.html-sauna-facitlies.webp" alt="sauna facilities">
+                        <p id="sauna-button" class="btn btn-primary text-center">Sauna Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
                             <li><strong>Accelerated Muscle Recovery</strong>
@@ -146,8 +146,8 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/pexels-jacobyavin-12918910.jpg" alt="pool facilities">
-                        <h1 id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</h1>
+                        <img class="srvc-img" src="assets/images/Converted/services.html-pool-image.webp" alt="pool facilities">
+                        <p id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
                             <li><strong>Full body workout</strong> Swimming uses all the muscles in the body so whether
@@ -176,8 +176,8 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/pexels-julia-larson-6455791.jpg" alt="staff training">
-                        <h1 id="trainer-button" class="btn btn-primary text-center"> Staff Training</h1>
+                        <img class="srvc-img" src="assets/images/Converted/services.html-staff-training.webp" alt="staff training">
+                        <p id="trainer-button" class="btn btn-primary text-center"> Staff Training</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
                             <li><strong>Personalized Training</strong>
