--- a/gallery.html
+++ b/gallery.html
@@ -54,12 +54,18 @@
             </div>
             <div class="container-box">
                 <div class="image-container">
-                    <img src="assets/images/Converted/gallery.html-image-9.webp" alt="person lifting a bar with weights">
-                    <img src="assets/images/Converted/gallery.html-image-4.webp" alt="person running on a treadmil">
-                    <img src="assets/images/Converted/gallery.html-image-1.webp " alt="two people using battle ropes">
-                    <img src="assets/images/Converted/gallery.html-image-6.webp" alt="people exercising">
-                    <img src="assets/images/Converted/gallery.html-image-7.webp" alt="image of different kettlebells">
-                    <img src="assets/images/Converted/gallery.html-image-3.webp" alt="two people training">
+                    <img src="assets/images/Converted/gallery.html-image-9.webp" 
+                    alt="person lifting a bar with weights">
+                    <img src="assets/images/Converted/gallery.html-image-4.webp" 
+                    alt="person running on a treadmil">
+                    <img src="assets/images/Converted/gallery.html-image-1.webp " 
+                    alt="two people using battle ropes">
+                    <img src="assets/images/Converted/gallery.html-image-6.webp" 
+                    alt="people exercising">
+                    <img src="assets/images/Converted/gallery.html-image-7.webp" 
+                    alt="image of different kettlebells">
+                    <img src="assets/images/Converted/gallery.html-image-3.webp" 
+                    alt="two people training">
                     <img src="assets/images/Converted/gallery.html-image-8.webp"
                         alt="person using the cable pull station">
                     <img src="assets/images/Converted/gallery.html-image-2.webp"
