--- a/services.html
+++ b/services.html
@@ -54,7 +54,6 @@
                     <h2 id="service" class="display-3">Services</h2>
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
-
                     <div class="infocard card">
                         <img class="srvc-img" src="assets/images/Converted/services.html-boxing-facilities.webp"
                             alt="boxing ring">
@@ -144,9 +143,9 @@
                         </ol>
                     </div>
                 </div>
-                <div class="row col-12 col-md-6 col-xl-6">
+                <div class="col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/Converted/services.html-pool-image.webp" alt="pool facilities">
+                        <img class="srvc-img" src="assets/images/Converted/services.html-pool-image-modified.webp" alt="pool facilities">
                         <p id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
@@ -174,7 +173,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="row col-12 col-md-6 col-xl-6">
+                <div class="col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
                         <img class="srvc-img" src="assets/images/Converted/services.html-staff-training.webp" alt="staff training">
                         <p id="trainer-button" class="btn btn-primary text-center"> Staff Training</p>
