added converted images to main folder and adjused them in html/css and added documents folder for github readme use

--- a/gallery.html
+++ b/gallery.html
@@ -54,23 +54,23 @@
             </div>
             <div class="container-box">
                 <div class="image-container">
-                    <img src="assets/images/Converted/gallery.html-image-9.webp" 
+                    <img src="assets/images/gallery.html-image-9.webp" 
                     alt="person lifting a bar with weights">
-                    <img src="assets/images/Converted/gallery.html-image-4.webp" 
+                    <img src="assets/images/gallery.html-image-4.webp" 
                     alt="person running on a treadmil">
-                    <img src="assets/images/Converted/gallery.html-image-1.webp " 
+                    <img src="assets/images/gallery.html-image-1.webp " 
                     alt="two people using battle ropes">
-                    <img src="assets/images/Converted/gallery.html-image-6.webp" 
+                    <img src="assets/images/gallery.html-image-6.webp" 
                     alt="people exercising">
-                    <img src="assets/images/Converted/gallery.html-image-7.webp" 
+                    <img src="assets/images/gallery.html-image-7.webp" 
                     alt="image of different kettlebells">
-                    <img src="assets/images/Converted/gallery.html-image-3.webp" 
+                    <img src="assets/images/gallery.html-image-3.webp" 
                     alt="two people training">
-                    <img src="assets/images/Converted/gallery.html-image-8.webp"
+                    <img src="assets/images/gallery.html-image-8.webp"
                         alt="person using the cable pull station">
-                    <img src="assets/images/Converted/gallery.html-image-2.webp"
+                    <img src="assets/images/gallery.html-image-2.webp"
                         alt="person pulling the rope from rowing machine">
-                    <img src="assets/images/Converted/gallery.html-image-5.webp"
+                    <img src="assets/images/gallery.html-image-5.webp"
                         alt="person motivating someone">
                 </div>
             </div>
