--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/Converted/services.html-boxing-facilities.webp"
+                        <img class="srvc-img" src="assets/images/services.html-boxing-facilities.webp"
                             alt="boxing ring">
                         <p id="boxing-button" class="btn btn-primary text-center"> Boxing Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="row col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/Converted/services.html-sauna-facitlies.webp" alt="sauna facilities">
+                        <img class="srvc-img" src="assets/images/services.html-sauna-facitlies.webp" alt="sauna facilities">
                         <p id="sauna-button" class="btn btn-primary text-center">Sauna Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/Converted/services.html-pool-image-modified.webp" alt="pool facilities">
+                        <img class="srvc-img" src="assets/images/services.html-pool-image-modified.webp" alt="pool facilities">
                         <p id="pool-button" class="btn btn-primary text-center">Swimming Pool Facilities</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-xl-6">
                     <div class="infocard card">
-                        <img class="srvc-img" src="assets/images/Converted/services.html-staff-training.webp" alt="staff training">
+                        <img class="srvc-img" src="assets/images/services.html-staff-training.webp" alt="staff training">
                         <p id="trainer-button" class="btn btn-primary text-center"> Staff Training</p>
                         <h2 class="benefit text-center">Benefits</h2>
                         <ul>
